# ironclaw-desktop-app

./: .gitignore  .prettierignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  LICENSE  OVERNIGHT_REPORT.md  PLAN.md  README.md  THIRD_PARTY_LICENSES.md  UX_NOTES.md  package-lock.json  package.json  playwright.config.ts  playwright.static.config.ts  tailwind.config.js  vite.config.js  vitest.config.ts  vitest.setup.ts
.claude/: launch.json
.claude/commands/: ironclaw-design-overhaul.md  ironclaw-design-review.md  ironclaw-flows.md  ironclaw-implementation-brief.md  ironclaw-patterns.md
.github/workflows/: check.yml  e2e.yml  release.yml  style-guard.yml
docs/: AGENT_HANDOFF_PROTOCOL.md  ARCHITECTURE.md  AUDIT-perf.md  AUTONOMOUS-SESSION-STATUS.md  BUILDOUT-PLAN.md  CODEX-WORKPLAN.md  QA-E2E-REPORT.md  QA-RECONCILIATION.md  RELEASE-SIGNING.md  ROADMAP-ELITE.md  STATIC_WEBUI_SYNC.md  SWIMMING-LANES.md  WORKSPACE-OS.md  agent-ui.md
docs/codex-tasks/: 102-triage-prompt-util.md  105-draft-prompt-util.md  200-audit-perf-simplification.md  49-lazy-load-routes.md  50-tts-tauri-command.md  53-multimodal-renderers.md  54-thread-sync-longpoll.md  56-sub-agent-dispatch.md  59-time-travel-wire.md  60-spotlight-indexing.md  61-apple-notes-export.md  62-idb-message-cache.md  66-python-repl.md  67-imagine-slash-command.md  70-workspace-files-mount.md  72-e2e-expansion.md  79-reply-thread-wire.md  81-streams-route.md  82-generative-widgets.md  85-auto-summarize-util.md  86-local-message-search.md  87-html-transcript-export.md  91-cost-estimate-util.md  92-thread-stats-util.md  93-format-time-util.md  94-fuzzy-match-util.md  95-text-diff-util.md  96-contrast-util.md  97-council-panel-e2e.md  98-omnibar-fuzzy-tests.md  99-briefing-prompt-util.md  INDEX.md
docs/design/: CLAUDE-DESIGN-DELIVERABLES.md  CLAUDE-DESIGN-OVERHAUL-NOTES.md  claude-code-overnight-workbench-loop-2026-06-20.md  component-grammar.md  console-redesign-STATUS.md  core-flow-specs.md  current-surface-truth-map.md  cursor-workbench-buildout-instructions-2026-06-19.md  design-acceptance-plan.md  desktop-app-design-overhaul-brief-2026-06-18.md  gateway-connector-route.patch  legal-oss-build-plan.md  near-ai-consolidated-roadmap-extraction-2026-06-18.md  phase-test-findings-2026-06-21.md  prepared-desk-ia.md  professional-life-surface-reset-2026-06-18.md  real-app-e2e-evidence.md  visual-system-spec.md  workbench-adjacent-ux-handoff-cursor-claude-2026-06-19.md  workbench-backend-wiring-map-2026-06-20.md  workbench-breakout-plan.md  workbench-buildout-STATUS.md  workbench-connector-wiring-fix-2026-06-20.md  workbench-design-render.html  workbench-evening-build-STATUS.md  workbench-live-data-wiring-2026-06-20.md  workbench-live-mcp-sidecar-support-2026-06-21.md  workbench-mcp-delivery-2026-06-20.md  workbench-overnight-final-handoff-2026-06-20.md  workbench-overnight-progress-2026-06-20.md  workbench-restoration-plan-2026-06-20.md  workbench-v13-fidelity-spec-2026-06-20.md  workbench-v13.html  workbench-visual-product-qa-2026-06-20.md
docs/prompts/: README.md  ironclaw-design-overhaul.md  ironclaw-design-pattern-generator.md  ironclaw-flow-redesign.md  ironclaw-hostile-design-review.md  ironclaw-implementation-brief.md
docs/reviews/: capability-overhaul-plan-2026-06-10.md  claude-handoff-ironclaw-desktop-2026-06-09.md  claude-hardening-result-2026-06-09.md  codex-workplan-prepush-review-2026-06-11.md  cos-parity-plan-2026-06-14.md  design-craft-pass-2026-06-30.md  design-pass-research-synthesis-2026-06-10.md  design-usability-escalation-2026-06-13.md  (+14 more)
scripts/: agent-sse-e2e.mjs  analyze-bundle.sh  build-reborn-sidecars.sh  build-reborn-sidecars.test.mjs  build-updater-manifest.mjs  build-updater-manifest.test.mjs  bump-version.sh  bundle-baseline.json  bundle-budget.json  bundle-compare.sh  capture-design-surfaces.mjs  capture-readme-shots.mjs  check-bundle-size.sh  check-release-readiness.sh  check-release-readiness.test.mjs  check-static-bundle-size.mjs  check-static-bundle-size.test.mjs  clear-token.sh  codex-dispatch.sh  connector-live-test.mjs  design-test-harness.mjs  dev-up.sh  generate-updater-key.sh  ironclaw-routine.sh  jarvis-proxy.mjs  lint-static-copy.mjs  lint-static-status-tokens.mjs  perf-snapshot.sh  prepare-universal-sidecars.sh  prepare-universal-sidecars.test.mjs  prepare-webui-static.mjs  probe-blocked-endpoints.sh  probe-live-embedded-attachment.mjs  probe-live-extension-ab.mjs  probe-live-reborn-assistant-run.mjs  probe-live-reborn-chat-attachments.mjs  probe-live-reborn-connectors.mjs  probe-live-reborn-model-execution.mjs  probe-live-work-product-openrouter.mjs  probe-new-sidecar-acceptance.mjs  (+19 more)
src/: app.css  app.d.ts  app.html  hooks.client.ts
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/binaries/: .gitignore  README.md  download.sh
src-tauri/capabilities/: default.json
src-tauri/icons/: build_icons.py  icon.icns
src-tauri/icons/tray/: build_tray_icons.py
src-tauri/resources/sounds/: README.md
src-tauri/src/: crashes.rs  fs_mount.rs  ironhub.rs  keychain.rs  lib.rs  main.rs  nearai_connect.rs  nearai_login.rs  notes_export.rs  ocr_assets.rs  sandbox_exec.rs  settings.rs  sidecar.rs  spotlight.rs  tray.rs  tts.rs  windows.rs
src/routes/: +page.ts  (+5 more)
tests/: design-tokens.test.ts  history-messages.test.ts
(+1226 files in other folders)
