[package]
name = "ironclaw-desktop"
version = "0.2.9"
description = "IronClaw Desktop Client"
authors = ["OpenClaw"]
edition = "2021"
rust-version = "1.80"

[lib]
name = "ironclaw_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.2", features = ["macos-private-api", "tray-icon", "image-png", "devtools"] }
tauri-plugin-shell = "2.2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
# HTTP plugin — frontend uses `@tauri-apps/plugin-http`'s `fetch` to route
# IronClaw gateway calls through the Rust process. This bypasses the
# WKWebView's CORS layer (the gateway's CORS allowlist doesn't include
# `tauri://localhost`, so production builds were stuck on "Disconnected"
# while dev mode worked from http://localhost:1420). Required for the
# bundled .app to talk to any gateway.
tauri-plugin-http = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
keyring = { version = "3", features = ["apple-native"] }
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time", "net"] }
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3"

[features]
# Tauri treats builds without `custom-protocol` as dev builds and points the
# webview at `build.devUrl` instead of embedding/serving `frontendDist`.
# Keep it enabled by default so plain `cargo build --release` produces a
# usable bundled app; `tauri dev` disables this feature for the Vite dev server.
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
